# npi-mt

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: README.md
data/real/gv161/: app_res_ohm_m.txt  depths_m.txt  freqs_hz.txt  phase_deg.txt
data/synthetic/ensemble_bank_small/: appres_ens.txt  phase_ens.txt
data/synthetic/training_small/: clean_appres_ens.txt  clean_phase_ens.txt  noisy_appres_ens.txt  noisy_phase_ens.txt  rho_ens.txt
examples/: example_01_forward_two_layer.ipynb  example_02_enscgp_real_gv161.ipynb  example_03_npi_finetune_and_propagate_gv161.ipynb
outputs/enscgp/gv161/: gv161_enscgp_appres_obs_ens_ohm_m.txt  gv161_enscgp_appres_train_ens_ohm_m.txt  gv161_enscgp_phase_obs_ens_deg.txt  gv161_enscgp_phase_train_ens_deg.txt  gv161_enscgp_rho_ens_ohm_m.txt  gv161_train_freqs_hz.txt
outputs/npi/gv161/: finetune_history.npy  gv161_npi_refined_app_res_ens_ohm_m.txt  gv161_npi_refined_log_rho_ens.txt  gv161_npi_refined_phase_ens_deg.txt  gv161_npi_refined_rho_ens_ohm_m.txt
scripts/: run_enscgp_synthetic_training_small.py  run_npi_synthetic_training_small.py
src/npi_mt/: __init__.py
src/npi_mt/enscgp/: __init__.py  interp.py  neighbors.py  types.py  update.py  workflow.py
src/npi_mt/io/: __init__.py  load_data.py
src/npi_mt/mt1d/: __init__.py  constants.py  forward.py  jacobians.py  models.py  sensitivities.py  transfer.py
src/npi_mt/npi/: __init__.py  normalization.py  physics_loss.py  refinement.py  resnet1d.py
